test/fail_compilation/fail310.d
Foo foo(A...)()
{
}

static assert(foo!(1, 2)());
